--- a/ieclub-frontend/pages/profile/index.wxml
+++ b/ieclub-frontend/pages/profile/index.wxml
@@ -82,6 +82,13 @@
       </view>
 
       <view class="menu-group">
+        <view class="menu-item" bindtap="goToAccountSecurity" hover-class="menu-item-hover">
+          <view class="menu-left">
+            <text class="menu-icon">🔐</text>
+            <text class="menu-label">账号与安全</text>
+          </view>
+          <text class="menu-arrow">›</text>
+        </view>
         <view class="menu-item" bindtap="goToStats" hover-class="menu-item-hover">
           <view class="menu-left">
             <text class="menu-icon">📊</text>
