--- a/ieclub-frontend/pages/profile/index.wxml
+++ b/ieclub-frontend/pages/profile/index.wxml
@@ -82,6 +82,13 @@
           </view>
           <text class="menu-arrow">›</text>
         </view>
+        <view class="menu-item" bindtap="goToMyStats" hover-class="menu-item-hover">
+          <view class="menu-left">
+            <text class="menu-icon">📊</text>
+            <text class="menu-label">我的数据</text>
+          </view>
+          <text class="menu-arrow">›</text>
+        </view>
       </view>
 
       <view class="menu-group">
