--- a/ieclub-frontend/pages/edit-profile/index.wxss
+++ b/ieclub-frontend/pages/edit-profile/index.wxss
@@ -94,6 +94,10 @@
   height: 100%;
 }
 
+.avatar-img {
+  border-radius: 50%;
+}
+
 .preview-placeholder {
   display: flex;
   flex-direction: column;
