--- a/ieclub-frontend/pages/community/index.wxss
+++ b/ieclub-frontend/pages/community/index.wxss
@@ -161,6 +161,12 @@
   box-shadow: 0 4rpx 12rpx rgba(139, 92, 246, 0.15);
 }
 
+.avatar-img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+}
+
 .avatar {
   font-size: 64rpx;
   line-height: 1;
